--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "primula",
 	"type": "module",
-	"version": "0.0.1",
+	"version": "0.0.10b",
 	"author": "kobe-koto",
 	"description": "just a website",
 	"homepage": "https://primula.dev.koto.cc/",
